--- a/conf/battle/battleground.conf
+++ b/conf/battle/battleground.conf
@@ -34,3 +34,66 @@ bg_update_interval: 1000
 // Before a player is warped into a Battleground from the Battleground Queue,
 // check to see if the player's current map has MF_NOWARP.
 bgqueue_nowarp_mapflag: no
+
+
+//===============================================
+// Extended Battleground Configuration [Easycore]
+//===============================================
+
+// Enables battleground's rotation mode system (Note 1)
+bg_rotation_mode: on
+
+// Time it takes to consider an AFK player and announce it (seconds)
+bg_idle_announce: 30
+
+// Time it takes to autokick an AFK player from arenas (seconds)
+bg_idle_autokick: 60
+
+// Battleground badges & kafrapoints reward rate (Note 2)
+bg_reward_rates: 100
+
+// Battleground badges & kafrapoints reward rates aditional for VIP players (Note 2)
+bg_reward_rates_vip: 50
+
+// Only team leader can kick AFK players through @reportafk? (Note 1)
+bg_reportafk_leaderonly: no
+
+// Players can only queue in towns map? (Note 1)
+bg_queue_onlytowns: no
+
+// Can player trade Battleground & WoE consumables? (Note 1)
+bg_can_trade: yes
+
+// Prevent double login in Battleground maps? (Note 1)
+bg_double_login: yes
+
+// Enable or disable Extended Check Equip feature (Note 1)
+bg_extended_check_equip: yes
+
+// Enable or disable confirmation window when the queue is ready (Note 1)
+// Note: only works when 'bg_queue_interface' is enabled
+bg_queue_confirmation: yes
+
+// Enable or disable battleground's interface when joining the queue (Note 1)
+bg_queue_interface: no
+
+// Gives Increase Agi and Blessing to players when a match ends (Note 1)
+bg_buffs_on_leave: yes
+
+// Balance Teams according players jobs? (Note 1)
+// Note: This break organized groups by party/guild joining
+bg_balance_teams: yes
+
+// Remove active buffs on join/leave a Battleground Arena (0: Disable)
+// 1 = Increase Agi & Blessing
+// 2 = Spirit Link
+// 4 = Full Chemical Protection
+// 8 = Gospel
+// 16 = Kyrie Eleison & Assumptio
+// 32 = Enchant Deadly Poison
+// 64 = Kaite, Koupe & Kaizel
+bg_remove_buffs: 63
+
+// Gives skill damage immunity to Barricade, Emperium, Flags and G. Stones? (Note 1)
+// Note: They are always immune to healing skills
+bg_monsters_skillimmune: no
