--- a/conf/msg_conf/map_msg.conf
+++ b/conf/msg_conf/map_msg.conf
@@ -1447,7 +1447,7 @@
 
 // @iteminfo
 1276: Please enter an item name/ID (usage: @ii/@iteminfo <item name/ID>).
-1277: Item: '%s'/'%s' (%u) Type: %s | Extra Effect: %s
+1277: Item: '%s'/'%s'[%d] (%u) Type: %s | Extra Effect: %s
 1278: None
 1279: With script
 1280: NPC Buy:%dz, Sell:%dz | Weight: %.1f
@@ -1457,7 +1457,7 @@
 
 // @whodrops
 1284: Please enter item name/ID (usage: @whodrops <item name/ID>).
-1285: Item: '%s' (ID: %u)
+1285: Item: '%s'[%d] (ID: %u)
 1286:  - Item is not dropped by mobs.
 1287:  - Common mobs with highest drop chance (only max %d are listed):
 
@@ -1795,6 +1795,50 @@
 // @grade
 1519: Please enter a position and an amount (usage: @grade <equip position> <+/- amount>).
 1520: %d items have been graded.
+
+// Extended Battleground [Easycore]
+2000: [Battlegrounds] %s has been kicked for being AFK
+2001: You have been kicked from Battleground for your AFK status
+2002: %s : %s seems to be away. AFK Warning - player can be kicked by @reportafk command
+2003: Double Login detected
+2004: Cannot Trade event reserved Items (Battleground, WoE)
+2005: Player not found.
+2006: [Your Battleground Rank -%d = %d points]
+2007: [Your Battleground Rank +%d = %d points]
+2008: [Your War of Emperium Rank -%d = %d points]
+2009: [Your War of Emperium Rank +%d = %d points]
+2010: %s : %s is no longer AFK...
+2011: Cannot use Emergency Call in this map.
+2012: Unknown skill. Use @guildskill EC/RS/RG/BO
+2013: This command is reserved for Guild Leaders.
+2014: This command is reserved for Team Leaders.
+2015: You need to be in a Guild or in a Battleground Arena.
+2016: EC: %d seconds
+2017: EC: Ready to use!
+2018: BO: %d seconds
+2019: BO: Ready to use!
+2020: RG: %d seconds
+2021: RG: Ready to use!
+2022: RS: %d seconds
+2023: RS: Ready to use!
+2024: Command cannot be used while casting a skill.
+2025: Please enter the name of the new Leader (usage: @leader <name>).
+2026: The player is not part of your Team.
+2027: You are already the Team Leader.
+2028: Team Leader transfered to [%s]
+2029: This command is reserved for Battleground
+2030: Please enter the AFK player's nick (usage: @reportafk <name>).
+2031: You cannot report yourself.
+2032: The player is not AFK in this Battleground
+2034: - AFK [%s] Kicked -
+2035: You will receive announces from Battleground
+2036: You no longer will receive announces from Battleground
+2037: Please write a message (usage: @order <message>).
+2038: Please use @joinbg to enlist in Battlegrounds.
+2039: Waiting for players... (%d/%d)
+2040: [%s] ready in %ds
+2041: Please use the command @joinbg to enlist in Battlegrounds
+
 
 //Custom translations
 import: conf/msg_conf/import/map_msg_eng_conf.txt
