--- a/conf/maps_athena.conf
+++ b/conf/maps_athena.conf
@@ -1605,3 +1605,30 @@ map: anexus
 map: Works
 map: sanctum
 map: ver_dun00
+
+//======================BG EXTENDED EASYCORE=====================
+map: bat_a03
+map: bat_a04
+map: bat_a05
+map: bat_b03
+map: bat_b04
+map: bat_b05
+map: bat_c04
+map: bat_c05
+map: bat_c06
+map: bat_c07
+map: bat_c08
+map: schg_cas06
+map: schg_cas07
+map: schg_cas08
+map: arug_cas06
+map: arug_cas07
+map: arug_cas08
+map: rush_cas01
+map: rush_cas02
+map: rush_cas03
+map: rush_cas04
+map: region_8
+map: bat_cc
+map: bat_cc2
+map: arena_01
