--- a/npc/scripts_athena.conf
+++ b/npc/scripts_athena.conf
@@ -12,23 +12,23 @@ npc: npc/airports/rachel.txt
 npc: npc/airports/yuno.txt
 
 npc: npc/Age/00-functions/newfunc.txt
-// --------------------- Battle Grounds -------------------------
-// - Flavius ----------------------------------------------------
-npc: npc/battleground/flavius/flavius_enter.txt
-npc: npc/battleground/flavius/flavius01.txt
-npc: npc/battleground/flavius/flavius02.txt
-// - Kreiger Von Midgard ----------------------------------------
-npc: npc/battleground/kvm/kvm_enter.txt
-npc: npc/battleground/kvm/kvm_item_pay.txt
-npc: npc/battleground/kvm/kvm01.txt
-npc: npc/battleground/kvm/kvm02.txt
-npc: npc/battleground/kvm/kvm03.txt
-// - Tierra Gorge -----------------------------------------------
-npc: npc/battleground/tierra/tierra_enter.txt
-npc: npc/battleground/tierra/tierra01.txt
-npc: npc/battleground/tierra/tierra02.txt
-// --------------------------------------------------------------
-npc: npc/battleground/bg_common.txt
+//// --------------------- Battle Grounds -------------------------
+//// - Flavius ----------------------------------------------------
+//npc: npc/battleground/flavius/flavius_enter.txt
+//npc: npc/battleground/flavius/flavius01.txt
+//npc: npc/battleground/flavius/flavius02.txt
+//// - Kreiger Von Midgard ----------------------------------------
+//npc: npc/battleground/kvm/kvm_enter.txt
+//npc: npc/battleground/kvm/kvm_item_pay.txt
+//npc: npc/battleground/kvm/kvm01.txt
+//npc: npc/battleground/kvm/kvm02.txt
+//npc: npc/battleground/kvm/kvm03.txt
+//// - Tierra Gorge -----------------------------------------------
+//npc: npc/battleground/tierra/tierra_enter.txt
+//npc: npc/battleground/tierra/tierra01.txt
+//npc: npc/battleground/tierra/tierra02.txt
+//// --------------------------------------------------------------
+//npc: npc/battleground/bg_common.txt
 
 // --------------------------- Cities ---------------------------
 npc: npc/cities/alberta.txt
