--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -1,6 +1,17 @@
 //==============================================================
 //====================== Custom Scripts ========================
 
+// ---------- Extended Battleground System [Easycore] ----------
+npc: npc/custom/eBG/bg_core.txt
+npc: npc/custom/eBG/bg_common.txt
+npc: npc/custom/eBG/bg_conquest.txt
+npc: npc/custom/eBG/bg_flavius_ctf.txt
+npc: npc/custom/eBG/bg_flavius_td.txt
+npc: npc/custom/eBG/bg_flavius_sc.txt
+npc: npc/custom/eBG/bg_tierra_boss.txt
+npc: npc/custom/eBG/bg_tierra_dom.txt
+npc: npc/custom/eBG/bg_tierra_ti.txt
+npc: npc/custom/eBG/bg_rush.txt
 //==============================================================
 //               - Sistemas Age Ragnarok -                     
 //==============================================================
