--- a/npc/re/scripts_athena.conf
+++ b/npc/re/scripts_athena.conf
@@ -10,7 +10,7 @@ npc: npc/re/other/global_npcs.txt
 npc: npc/re/airports/izlude.txt
 
 // --------------------- Battle Grounds -------------------------
-npc: npc/re/battleground/bg_common.txt
+//npc: npc/re/battleground/bg_common.txt
 
 // --------------------------- Cities ---------------------------
 npc: npc/re/cities/alberta.txt
@@ -69,6 +69,7 @@ npc: npc/re/instances/BangungotHospital.txt
 npc: npc/re/instances/BuwayaCave.txt
 npc: npc/re/instances/CentralLaboratory.txt
 npc: npc/re/instances/CharlestonCrisis.txt
+//npc: npc/re/instances/Constellation_Tower.txt
 npc: npc/re/instances/CorOperation.txt
 npc: npc/re/instances/DevilTower.txt
 npc: npc/re/instances/EclageInterior.txt
