--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -41,6 +41,7 @@ npc: npc/Age/00-functions/woe.txt
 //=============================================================
 //===================Utilidades Prontera=======================
 npc: npc/Age/01-prontera/Banco_moedas.txt
+npc: npc/Age/01-prontera/warper.txt
 npc: npc/Age/01-prontera/Curandeiro.txt
 npc: npc/Age/01-prontera/Estilista_PRT.txt
 npc: npc/Age/01-prontera/Enchant_Arma.txt
@@ -84,7 +85,7 @@ npc: npc/Age/07-vip/Sistemas/auxiliar_vip.txt
 npc: npc/Age/07-vip/Sistemas/Sistema_vip.txt
 npc: npc/Age/07-vip/Sistemas/comandos_vip.txt
 npc: npc/Age/07-vip/Sistemas/go_vip.txt
-npc: npc/Age/07-vip/Sistemas/teleport_vip_P.txt
+//npc: npc/Age/07-vip/Sistemas/teleport_vip_P.txt
 npc: npc/Age/07-vip/Sistemas/portal_vip_P.txt
 //==============================================================
 //				- Sala GOLD Age Ragnarok - 
