--- a/conf/groups.yml
+++ b/conf/groups.yml
@@ -48,6 +48,10 @@ Body:
     Commands:
       changedress: true
       resurrect: true
+      go: true
+      warp: true
+      zeny: true
+      item: true
     Permissions:
       # without this basic permissions regular players could not trade or party
       can_trade: true
