--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -44,15 +44,15 @@ npc: npc/Age/01-prontera/Banco_moedas.txt
 npc: npc/Age/01-prontera/warper.txt
 npc: npc/Age/01-prontera/Curandeiro.txt
 npc: npc/Age/01-prontera/Estilista_PRT.txt
-npc: npc/Age/01-prontera/Enchant_Arma.txt
-npc: npc/Age/01-prontera/Enchant_Armadura.txt
-npc: npc/Age/01-prontera/Instancias.txt
+//npc: npc/Age/01-prontera/Enchant_Arma.txt
+//npc: npc/Age/01-prontera/Enchant_Armadura.txt
+//npc: npc/Age/01-prontera/Instancias.txt
 npc: npc/Age/01-prontera/Kafra.txt
 //npc: npc/Age/01-prontera/mestra_das_classes.txt
 npc: npc/custom/jobmaster.txt
-npc: npc/Age/01-prontera/mercado_negro.txt
+//npc: npc/Age/01-prontera/mercado_negro.txt
 npc: npc/Age/01-prontera/ticket.txt
-npc: npc/Age/01-prontera/vendinhas.txt
+//npc: npc/Age/01-prontera/vendinhas.txt
 //npc: npc/Age/01-prontera/Enquete.txt
 //=============================================================
 //npc: npc/Age/01-prontera/utilidades.txt
