--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -57,7 +57,7 @@ npc: npc/Age/01-prontera/ticket.txt
 //=============================================================
 //npc: npc/Age/01-prontera/utilidades.txt
 //npc: npc/Age/01-prontera/Presenca_Free.txt
-//npc: npc/Age/01-prontera/Quest_shop.txt
+//npc: npc/Age/01-prontera/Quest_shop.txt/
 //=============================================================
 //=======================ARENA PVP=============================
 npc: npc/Age/03-pvp/death_arena.txt
