--- a/conf/maps_athena.conf
+++ b/conf/maps_athena.conf
@@ -1605,6 +1605,7 @@ map: anexus
 map: Works
 map: sanctum
 map: ver_dun00
+map: 4@ch_t
 
 //======================BG EXTENDED EASYCORE=====================
 map: bat_a03
