--- a/db/import/item_cash.yml
+++ b/db/import/item_cash.yml
@@ -31,3 +31,9 @@
 Header:
   Type: ITEM_CASH_DB
   Version: 1
+
+Body:
+  - Tab: New
+    Items:
+      - Item: Max_Weight_Up_Box
+        Price: 8000
