--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -15,7 +15,7 @@
 //==============================================================
 //               - Sistemas Age Ragnarok -                     
 //==============================================================
-npc: npc/Age/00-functions/die.txt
+//npc: npc/Age/00-functions/die.txt
 npc: npc/Age/00-functions/Anuncios.txt
 npc: npc/Age/00-functions/getaccountid.txt
 npc: npc/Age/00-functions/getcharonline.txt
@@ -25,12 +25,12 @@ npc: npc/Age/00-functions/format_timer.txt
 npc: npc/Age/00-functions/getcharnameonlinebyaid.txt
 npc: npc/Age/00-functions/getjobname.txt
 npc: npc/Age/00-functions/getcharonline.txt
-npc: npc/Age/05-gm/gerente_cash.txt
+//npc: npc/Age/05-gm/gerente_cash.txt
 npc: npc/Age/09-Sistema_mvp/loja_mvp.txt
 npc: npc/Age/09-Sistema_mvp/rank_MVP.txt
 npc: npc/Age/00-functions/ROTD.txt
-npc: npc/Age/00-functions/Buff_F.txt
-npc: npc/Age/00-functions/oracaoSA.txt
+//npc: npc/Age/00-functions/Buff_F.txt
+//npc: npc/Age/00-functions/oracaoSA.txt
 npc: npc/Age/00-functions/metas.txt
 npc: npc/Age/00-functions/woe.txt
 //npc: npc/Age/12-BattlePass/Battle_Pass.txt
@@ -60,7 +60,7 @@ npc: npc/Age/01-prontera/ticket.txt
 //npc: npc/Age/01-prontera/Quest_shop.txt/
 //=============================================================
 //=======================ARENA PVP=============================
-npc: npc/Age/03-pvp/death_arena.txt
+//npc: npc/Age/03-pvp/death_arena.txt
 //==============================================================
 //               - Eventos Age Ragnarök -            
 //==============================================================
