--- a/db/re/item_db_usable.yml
+++ b/db/re/item_db_usable.yml
@@ -58799,7 +58799,7 @@ Body:
       NoMail: true
       NoAuction: true
     Script: |
-       callfunc "F_Kachua_Key";
+      /* callfunc "F_Kachua_Key"; */
   - Id: 23921
     AegisName: Season_Evt_Reward
     Name: Event Reward Box
