--- a/npc/re/scripts_athena.conf
+++ b/npc/re/scripts_athena.conf
@@ -133,8 +133,8 @@ npc: npc/re/merchants/catalog.txt
 npc: npc/re/merchants/clothing_buff_removal.txt
 npc: npc/re/merchants/coin_exchange.txt
 npc: npc/re/merchants/Dealer_Update.txt
-npc: npc/re/merchants/diamond.txt
-npc: npc/re/merchants/Emperium_Seller.txt
+//npc: npc/re/merchants/diamond.txt
+//npc: npc/re/merchants/Emperium_Seller.txt
 npc: npc/re/merchants/enchan_illusion_16_2.txt
 npc: npc/re/merchants/enchan_illusion_17_1.txt
 npc: npc/re/merchants/enchan_ko.txt
