--- a/db/import/item_cash.yml
+++ b/db/import/item_cash.yml
@@ -31,3 +31,29 @@
 Header:
   Type: ITEM_CASH_DB
   Version: 1
+
+Body:
+  - Tab: New
+    Items:
+      - Item: Bubble_Gum
+        Price: 500
+      - Item: HE_Bubble_Gum
+        Price: 1000
+      - Item: Big_Bun_Box500
+        Price: 5000
+      - Item: Pill__Box500
+        Price: 5000
+      - Item: Savage_BBQ
+        Price: 50
+      - Item: Drocera_Herb_Stew
+        Price: 50
+      - Item: Minor_Brisket
+        Price: 50
+      - Item: Wug_Blood_Cocktail
+        Price: 50
+      - Item: Siroma_Icetea
+        Price: 50
+      - Item: Petti_Tail_Noodle
+        Price: 50
+      - Item: Max_Weight_Up_Box
+        Price: 9000
