--- a/npc/scripts_athena.conf
+++ b/npc/scripts_athena.conf
@@ -28,7 +28,7 @@ npc: npc/Age/00-functions/newfunc.txt
 //npc: npc/battleground/tierra/tierra01.txt
 //npc: npc/battleground/tierra/tierra02.txt
 //// --------------------------------------------------------------
-//npc: npc/battleground/bg_common.txt
+npc: npc/battleground/bg_common.txt
 
 // --------------------------- Cities ---------------------------
 npc: npc/cities/alberta.txt
