--- a/conf/battle/misc.conf
+++ b/conf/battle/misc.conf
@@ -62,7 +62,7 @@ etc_log: off
 warp_point_debug: no
 
 // Choose if server begin with night (yes) or day (no)
-night_at_start: no
+night_at_start: yes
 
 // Define duration in msec of the day (default: 7200000 = 2 hours)
 // Set to 0 to disable day cycle (but not @day GM command).
