--- a/db/import/item_cash.yml
+++ b/db/import/item_cash.yml
@@ -119,3 +119,21 @@ Body:
         Price: 5000
       - Item: C_Pink_Bunny_Band_J
         Price: 5000
+      - Item: C_Cat_Hat_J
+        Price: 5000
+      - Item: C_King_Poring_Hat
+        Price: 5000
+      - Item: C_Twin_Ribbon_J
+        Price: 5000
+      - Item: C_Imp_Hat
+        Price: 5000
+      - Item: Drooping_Kiehl
+        Price: 5000
+      - Item: Drooping_Aliot
+        Price: 5000
+      - Item: C_Droopy_Alice_Doll
+        Price: 5000
+      - Item: C_Valkyrie_Feather_Band
+        Price: 5000
+      - Item: C_Chick_Hat
+        Price: 5000
