--- a/db/import/item_cash.yml
+++ b/db/import/item_cash.yml
@@ -137,3 +137,471 @@ Body:
         Price: 5000
       - Item: C_Chick_Hat
         Price: 5000
+      - Item: C_Bunny_Band
+        Price: 5000
+      - Item: C_Tiara
+        Price: 5000
+      - Item: C_Crown
+        Price: 5000
+      - Item: C_Flower_Hairband
+        Price: 5000
+      - Item: C_Nurse_Cap
+        Price: 5000
+      - Item: C_Sahkkat
+        Price: 5000
+      - Item: C_Whikebain_Ears
+        Price: 5000
+      - Item: C_Rainbow_Feather_Deco
+        Price: 5000
+      - Item: C_J_Captain_Hat
+        Price: 5000
+      - Item: Felock_Cap
+        Price: 5000
+      - Item: C_Minstrel_Hat
+        Price: 5000
+      - Item: C_Wind_Milestone
+        Price: 5000
+      - Item: C_Soulless_Wing
+        Price: 5000
+      - Item: C_Santa_Poring_Hat
+        Price: 5000
+      - Item: C_ShineSantaPoring
+        Price: 5000
+      - Item: C_SantaHairband
+        Price: 5000
+      - Item: C_Rudolph_Santa_Hat
+        Price: 5000
+      - Item: C_Lush_Rose
+        Price: 5000
+      - Item: C_Rudolph_Santa_Hat
+        Price: 5000
+      - Item: C_Red_Bonnet
+        Price: 5000
+      - Item: C_Santa_Hat_1
+        Price: 5000
+      - Item: C_Red_Dress_Hat
+        Price: 5000
+      - Item: C_Polar_Bear_Cap
+        Price: 5000
+      - Item: Elizabeth
+        Price: 5000
+      - Item: C_Little_Angel_Doll
+        Price: 5000
+      - Item: C_Coronet
+        Price: 5000
+      - Item: C_Neko_Mimi_Kafra
+        Price: 5000
+      - Item: C_Darkness_Helm
+        Price: 5000
+      - Item: C_Panda_Cap
+        Price: 5000
+      - Item: C_Corsair_K
+        Price: 5000
+      - Item: C_Detective_Hat_K
+        Price: 5000
+      - Item: C_Sleeping_Kitty_Cat
+        Price: 5000
+      - Item: C_Saint_Frill_Ribbon
+        Price: 5000
+      - Item: C_Light_Darkness_Crown
+        Price: 5000
+      - Item: C_Twinkle_Little_Star
+        Price: 5000
+      - Item: C_King_Berry
+        Price: 5000
+      - Item: C_Persika
+        Price: 5000
+      - Item: C_Rabbit_Ear_Knit_Hat
+        Price: 5000
+      - Item: C_Drooping_Kitty
+        Price: 5000
+      - Item: C_Morrigane's_Helm
+        Price: 5000
+      - Item: C_Mistress_Crown
+        Price: 5000
+      - Item: C_Sweet_Gents
+        Price: 5000
+      - Item: C_Carnation_Hairband
+        Price: 5000
+      - Item: C_Lolita_Ten_Gallon_Hat
+        Price: 5000
+      - Item: C_Pecopeco_Cap
+        Price: 5000
+      - Item: C_Evil_Druid_Hat
+        Price: 5000
+      - Item: C_Vicious_Stop_Bandage
+        Price: 5000
+      - Item: C_Amistr_Cap
+        Price: 5000
+      - Item: C_Filir_Hat
+        Price: 5000
+      - Item: C_Lif_Doll_Hat
+        Price: 5000
+      - Item: C_Vanilmirth_Hat
+        Price: 5000
+      - Item: C_L_Magestic_Goat
+        Price: 5000
+      - Item: C_Angeling_Hat
+        Price: 5000
+      - Item: C_Brown_Bear_Cap
+        Price: 5000
+      - Item: C_Galapago_Cap
+        Price: 5000
+      - Item: C_Cryptura_Hair_Cap
+        Price: 5000
+      - Item: C_Heart_Hair_Pin
+        Price: 5000
+      - Item: C_Joker_Jester
+        Price: 5000
+      - Item: C_Rabbit_Ear_Hat
+        Price: 5000
+      - Item: C_Drooping_Bunny
+        Price: 5000
+      - Item: C_Piamette_Hood
+        Price: 5000
+      - Item: C_Vanargandr_Helm
+        Price: 5000
+      - Item: C_Witchs_Hat
+        Price: 5000
+      - Item: C_Gloomy_Pumpkin_Hat
+        Price: 5000
+      - Item: C_Noah_Hat
+        Price: 5000
+      - Item: C_Lazy_Raccoon
+        Price: 5000
+      - Item: C_Cap_Of_Concentration
+        Price: 5000
+      - Item: C_10Gallon_Hat_Of_Flame
+        Price: 5000
+      - Item: C_Hunting_Cap_Of_Gust
+        Price: 5000
+      - Item: C_Knit_Cap_Of_Water
+        Price: 5000
+      - Item: C_Silk_Hat_Of_Earth
+        Price: 5000
+      - Item: C_Ear_Mufs
+        Price: 5000
+      - Item: C_Rune_Circlet
+        Price: 5000
+      - Item: C_Mitra
+        Price: 5000
+      - Item: C_Cat_Santa_Hat
+        Price: 5000
+      - Item: C_Flower_Hairpin
+        Price: 5000
+      - Item: C_Winter_Hat
+        Price: 5000
+      - Item: C_Marionette_Doll
+        Price: 5000
+      - Item: C_Cow_Hat1
+        Price: 5000
+      - Item: C_Cow_Hat2
+        Price: 5000
+      - Item: C_Cow_Hat3
+        Price: 5000
+      - Item: C_Cow_Hat4
+        Price: 5000
+      - Item: C_Sword_Master_Crown
+        Price: 5000
+      - Item: C_Whrabbit_Hband
+        Price: 5000
+      - Item: C_Blrabbit_Hband
+        Price: 5000
+      - Item: C_DragonCintamani_Hat1
+        Price: 5000
+      - Item: C_DragonCintamani_Hat2
+        Price: 5000
+      - Item: C_DragonCintamani_Hat3
+        Price: 5000
+      - Item: C_DragonCintamani_Hat4
+        Price: 5000
+      - Item: C_Star_Sparkling
+        Price: 5000
+      - Item: C_Fillet_Green
+        Price: 5000
+      - Item: C_Fillet_Red
+        Price: 5000
+      - Item: C_Fillet_Blue
+        Price: 5000
+      - Item: C_Fillet_White
+        Price: 5000
+      - Item: C_Vampire_Hairband
+        Price: 5000
+      - Item: C_Coiledup_Snake_Hat1
+        Price: 5000
+      - Item: C_Coiledup_Snake_Hat2
+        Price: 5000
+      - Item: C_Whisper_Tall_Hat
+        Price: 5000
+      - Item: C12th_Crown
+        Price: 5000
+      - Item: C_Poring_Mascot_Costume
+        Price: 5000
+      - Item: C_Horse_Hairpin1
+        Price: 5000
+      - Item: C_Horse_Hairpin2
+        Price: 5000
+      - Item: C_Fish_On_Head
+        Price: 5000
+      - Item: C_Circlet
+        Price: 5000
+      - Item: C_Blue_Hair_Band
+        Price: 5000
+      - Item: C_Prontera_Army_Cap
+        Price: 5000
+      - Item: C_Drooping_Dorasuke
+        Price: 5000
+      - Item: C_Monkey_On_Fur_Hat
+        Price: 5000
+      - Item: C_Westren_Grace
+        Price: 5000
+      - Item: C_Mistic_Rose
+        Price: 5000
+      - Item: C_Evil_Marcher_Hat
+        Price: 5000
+      - Item: C_Rabbit_Head_Dress
+        Price: 5000
+      - Item: C_Bandana
+        Price: 5000
+      - Item: C_Hunting_Cap
+        Price: 5000
+      - Item: C_Stripe_Band
+        Price: 5000
+      - Item: C_Necktie
+        Price: 5000
+      - Item: C_Loki_Nidhogg_Hat
+        Price: 5000
+      - Item: C_Santa_Hat_2
+        Price: 5000
+      - Item: C_Red_Tailed_Ribbon
+        Price: 5000
+      - Item: C_Pumpkin_Hat
+        Price: 5000
+      - Item: C_Hair_Brush
+        Price: 5000
+      - Item: C_Puppy_Hat2
+        Price: 5000
+      - Item: C_Pig_Moneybox2
+        Price: 5000
+      - Item: C_Snowman_Hat
+        Price: 5000
+      - Item: C_Celines_Ribbon
+        Price: 5000
+      - Item: C_Gold_Angel_Sculpture
+        Price: 5000
+      - Item: C_Snownow_Hat
+        Price: 5000
+      - Item: C_Blackhand_Of_Fate
+        Price: 5000
+      - Item: C_Secret_Zipper
+        Price: 5000
+      - Item: C_Sleep_Eclipse_Family
+        Price: 5000
+      - Item: C_Soft_Sheep_Hat
+        Price: 5000
+      - Item: C_Beelzebub_Crown
+        Price: 5000
+      - Item: C_Tare_HSchool_Doll_Hat
+        Price: 5000
+      - Item: C_Sombrero
+        Price: 5000
+      - Item: C_Special_Kapra_Hat
+        Price: 5000
+      - Item: C_Woodie_Hat
+        Price: 5000
+      - Item: aegis_420172
+        Price: 5000
+      - Item: C_Niflheim_Bunny_Hat
+        Price: 5000
+      - Item: C_White_Lily
+        Price: 5000
+      - Item: C_Small_Poring_Band
+        Price: 5000
+      - Item: C_Rabbit_Ear_Eggshell
+        Price: 5000
+      - Item: C_Louise_Red_Hat
+        Price: 5000
+      - Item: C_Wild_Poring_Rider
+        Price: 5000
+      - Item: C_SweetChocolate_Hat
+        Price: 5000
+      - Item: C_Smokie_Hat
+        Price: 5000
+      - Item: C_Republic_Hat
+        Price: 5000
+      - Item: C_Combat_Vestige
+        Price: 5000
+      - Item: C_Khalitzburg_KN_Helm
+        Price: 5000
+      - Item: C_Monochrome_RibbonHat
+        Price: 5000
+      - Item: C_Cherry_Blossom_Hat
+        Price: 5000
+      - Item: C_Pigeon_Hat
+        Price: 5000
+      - Item: C_Pope_Crown
+        Price: 5000
+      - Item: C_Valkyrie_Circlet
+        Price: 5000
+      - Item: C_Cat_Ear_Hat
+        Price: 5000
+      - Item: C_berry_Prince_Crown
+        Price: 5000
+      - Item: C_Gelato_Hat
+        Price: 5000
+      - Item: C_Sailor_Hat
+        Price: 5000
+      - Item: C_Starfish_Headband
+        Price: 5000
+      - Item: C_Forceps_Hairpin
+        Price: 5000
+      - Item: C_Rabbit_Ribbon
+        Price: 5000
+      - Item: C_QueenAnzRevenge
+        Price: 5000
+      - Item: C_Ghostring_Tall_Hat
+        Price: 5000
+      - Item: C_Helm_Of_Dragoon
+        Price: 5000
+      - Item: C_Steampunk_Hat
+        Price: 5000
+      - Item: C_Magical_Feather
+        Price: 5000
+      - Item: C_Christmas_Wreath
+        Price: 5000
+      - Item: C_Cowboy_Hat_B
+        Price: 5000
+      - Item: C_Cactus_Corsage
+        Price: 5000
+      - Item: C_Indi_Feather_Band
+        Price: 5000
+      - Item: C_Spirit_Of_Chung_E
+        Price: 5000
+      - Item: C_Power_Of_Thor
+        Price: 5000
+      - Item: C_Cat_Hat
+        Price: 5000
+      - Item: C_Firinto_Scarf
+        Price: 5000
+      - Item: C_Helm_Of_Angel
+        Price: 5000
+      - Item: C_Gram_Peony
+        Price: 5000
+      - Item: C_Choco_Minihat
+        Price: 5000
+      - Item: C_Piggyback
+        Price: 5000
+      - Item: C_Clover_Silkhat
+        Price: 5000
+      - Item: C_Marcher_Hat
+        Price: 5000
+      - Item: C_Cowboy_Hat_J
+        Price: 5000
+      - Item: C_Fish_Head_Hat
+        Price: 5000
+      - Item: C_Bomb_Wick
+        Price: 5000
+      - Item: C_Chicken_Hat
+        Price: 5000
+      - Item: C_Hat_Of_Drowsy_Cat
+        Price: 5000
+      - Item: C_White_Black_Temp
+        Price: 5000
+      - Item: C_Drooping_White_Kitty
+        Price: 5000
+      - Item: C_Penguin_Cap
+        Price: 5000
+      - Item: C_Bell_Flower
+        Price: 5000
+      - Item: C_Nydhog_Wig
+        Price: 5000
+      - Item: C_Disposable_Popcorn
+        Price: 5000
+      - Item: C_Pinwheel_Cap
+        Price: 5000
+      - Item: C_Memory_Of_Noodle
+        Price: 5000
+      - Item: C_Pinwheel_Cap_R
+        Price: 5000
+      - Item: C_Man_Medal
+        Price: 5000
+      - Item: C_Man_Medal_Gold
+        Price: 5000
+      - Item: C_Clock_Casket
+        Price: 5000
+      - Item: C_Harvest_Festa_Hat
+        Price: 5000
+      - Item: C_Bell_Ribbon
+        Price: 5000
+      - Item: C_Alice_Doll
+        Price: 5000
+      - Item: C_Holy_Marching_Hat_J
+        Price: 5000
+      - Item: C_Noble_Hat
+        Price: 5000
+      - Item: C_Balloon_Hat
+        Price: 5000
+      - Item: C_Picnic_Hat
+        Price: 5000
+      - Item: C_Angeling_Wanna_Fly
+        Price: 5000
+      - Item: C_Spirit_Chain
+        Price: 5000
+      - Item: C_Teddy_Bear_Hood
+        Price: 5000
+      - Item: C_Side_Cap
+        Price: 5000
+      - Item: C_Jjakk
+        Price: 5000
+      - Item: C_Tare_Pope_Casual
+        Price: 5000
+      - Item: C_Pope_Sitting_Head
+        Price: 5000
+      - Item: C_White_Bird_Rose
+        Price: 5000
+      - Item: C_Khalitzburg_Helm_BL
+        Price: 5000
+      - Item: C_CatEars_Cyber_HeadP_R
+        Price: 5000
+      - Item: C_Shura_King_Pledge
+        Price: 5000
+      - Item: C_Drooping_Argiope
+        Price: 5000
+      - Item: C_Chain_Puppet
+        Price: 5000
+      - Item: C_Sweets_Bonbon
+        Price: 5000
+      - Item: C_Sorcerer_Hood
+        Price: 5000
+      - Item: C_Fluffy_Heart_Earmuffs
+        Price: 5000
+      - Item: C_Afro_Wig_Red
+        Price: 5000
+      - Item: C_Red_Strong_Hair
+        Price: 5000
+      - Item: C_Black_Strong_Hair
+        Price: 5000
+      - Item: C_White_Strong_Hair
+        Price: 5000
+      - Item: C_Volume_Low_TwinK
+        Price: 5000
+      - Item: C_Lolita_Two_Side_UpK
+        Price: 5000
+      - Item: C_Seraph_Wing_Helm
+        Price: 5000
+      - Item: C_Ghost_Holiday
+        Price: 5000
+      - Item: C_Astro_Circle
+        Price: 5000
+      - Item: C_Pop_Popcorn_Hat
+        Price: 5000
+      - Item: C_Bouquet_Hat
+        Price: 5000
+      - Item: C_Happy_Rabbit_Ribbon
+        Price: 5000
+      - Item: C_Slurp_Slurp_Hat
+        Price: 5000
+      - Item: C_Airy_Two_Side_Up_WH
+        Price: 5000
+      - Item: C_Sepia_Cap
+        Price: 5000
